# zephyr-hxzp

./: CMakeLists.txt  Kconfig  hxzp.code-workspace  hxzp.yml  west.yml
app/: CMakeLists.txt  prj.conf
app/src/: main.cpp
boards/duck_mid/: Kconfig.duck_mid  board.cmake  board.yml  duck_mid.dts  duck_mid.yaml  duck_mid_defconfig
boards/hxzp_f103ve/: Kconfig.hxzp_f103ve  board.yml  hxzp_f103ve.dts  hxzp_f103ve.yaml
boards/hxzp_main/: Kconfig.hxzp_main  board.cmake  board.yml  hxzp_main.dts  hxzp_main.yaml  hxzp_main_defconfig
boards/lumina/: Kconfig.lumina  board.yml  lumina.dts  lumina.yaml  lumina_defconfig
boards/lumina/support/: openocd.cfg
boards/lumina_pwm/: Kconfig.lumina_pwm  board.cmake  board.yml  lumina_pwm.dts  lumina_pwm.yaml  lumina_pwm_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/can_protocol/: CMakeLists.txt  Kconfig  can_protocol.c
drivers/motor/: CMakeLists.txt  Kconfig
drivers/motor/gen_motor/: CMakeLists.txt  Kconfig  gen_motor.c
drivers/uart_protocol/: CMakeLists.txt  Kconfig  uart_protocol.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/can/: hxzp,can-protocol.yaml
dts/bindings/clock/: st,stm32f1-rcc.yaml
dts/bindings/motor/: hxzp,gen-motor.yaml
dts/bindings/serial/: hxzp,uart-protocol.yaml
include/zephyr/drivers/: can_protocol.h  gen_motor.h  uart_protocol.h
scripts/: env.sh  init.sh
zephyr/: module.yml
